finished the features section

--- a/styles/architec.css
+++ b/styles/architec.css
@@ -19,6 +19,10 @@
     border: 0px;
 }
 
+.text-light-gray {
+    color: #727272;
+}
+
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.10);
@@ -118,10 +122,13 @@ main {
     header {
         padding: 20px;
     }
-    nav {
+    nav, .teams-container
+     {
         flex-direction: column;
     }
-    
+    .teams-img-container {
+        grid-template-columns: 1fr;
+    }  
 }
 
 /* tablet or medium devices */
