--- a/styles/architec.css
+++ b/styles/architec.css
@@ -23,6 +23,12 @@
     color: #727272;
 }
 
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+
 /* header styles */
 header {
     background: rgba(255, 144, 14, 0.10);
@@ -51,11 +57,7 @@ nav li a {
     color: #424242;
 }
 
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
-}
+
 
 /* banner styles */
 .banner-content {
@@ -116,13 +118,60 @@ main {
     font-weight: 700;
 }
 
+/* facts section */
+.facts-card-container {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+
+.facts-card-container .card-starts {
+    font-size: 2.8rem;
+    color: #424242;
+}
+
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 40px 30px;
+}
+
+.facts-card-container {
+    gap: 20px;
+}
+
+/* sponsors */
+.sponsors {
+    text-align: center;
+}
+
+.sponsors-img-container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+
+.sponsors-img-container img {
+    width: 165px;
+}
+
 /* responsive media queries */
 /* mobile devices */
 @media screen and (max-width: 576px) {
     header {
         padding: 20px;
     }
-    nav, .teams-container
+    nav, .teams-container, .facts-card-container,
+    .sponsors-img-container
      {
         flex-direction: column;
     }
@@ -136,8 +185,8 @@ main {
     header {
         padding: 20px;
     }
-    nav {
+    nav,
+    .teams-container, .sponsors-img-container {
         flex-direction: column;
     }
-    
 }
