added the footer section

--- a/styles/architec.css
+++ b/styles/architec.css
@@ -118,6 +118,51 @@ main {
     font-weight: 700;
 }
 
+/* features section styles */
+.features{
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+}
+
+.features-content .card {
+        padding: 30px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        background: #FFF;
+        box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.features .section-title {
+    border-left: 5px solid #FF900E;
+    margin-left: 20px;
+}
+
+.feature-img img {
+    height: 90%;
+    margin-left: 90px;
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 340px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+}
+.ten-years-badge h2 {
+    font-size: 4rem;
+    margin-top: 0px;
+    color: #FFF;
+}
+.ten-years-badge p {
+    font-size: 4rem;
+    margin-top: 0px;
+}
+
 /* facts section */
 .facts-card-container {
     display: flex;
@@ -171,12 +216,21 @@ main {
         padding: 20px;
     }
     nav, .teams-container, .facts-card-container,
-    .sponsors-img-container
+    .sponsors-img-container, .features
      {
         flex-direction: column;
     }
+
+    .feature-img img {
+        width: 100%;
+        margin-left: 0px;
+    }
     .teams-img-container {
         grid-template-columns: 1fr;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
     }  
 }
 
@@ -186,7 +240,7 @@ main {
         padding: 20px;
     }
     nav,
-    .teams-container, .sponsors-img-container {
+    .teams-container, .sponsors-img-container, .features {
         flex-direction: column;
     }
 }
